# Hugging-Face-Hub-Garden

./: README.en.md  README.md
CSAT-English/: README.md  doc_to_json.py  (+4 more)
Korean-Culture/: Dockerfile  README.md  generate_augmented_pairs_gemini.py  merged_final.json  pyproject.toml
Korean-Culture/src/eval/: exp.sh  infer.py  infer_module.py  meme_sample_with_questions.jsonl  prompt.py  score.py  understand_questions.json  understanding_evaluation_augmenter.py  usage_questions.json
Korean-Culture/src/eval/results/understand/infer_results/: EXAONE-3.5-7.8B-Instruct-KoCulture-fulltrain-transformers_understand_inference_results.json  EXAONE-3.5-7.8B-Instruct_understand_inference_results.json  HyperCLOVAX-SEED-Text-Instruct-1.5B-KoCulture-fulltrain-transformers_understand_inference_results.json  HyperCLOVAX-SEED-Text-Instruct-1.5B_understand_inference_results.json  Qwen3-8B-KoCulture-fulltrain-transformers_understand_inference_results.json  Qwen3-8B_understand_inference_results.json  gpt-4o_understand_inference_results.json  kanana-1.5-8b-instruct-2505-KoCulture-fulltrain-transformers_understand_inference_results.json  kanana-1.5-8b-instruct-2505_understand_inference_results.json
Korean-Culture/src/eval/results/understand/score_results/: EXAONE-3.5-7.8B-Instruct-KoCulture-fulltrain-gpt-4o-score_results.json  EXAONE-3.5-7.8B-Instruct-KoCulture-fulltrain-transformers-gpt-4.1-score_results.json  (+5 more)
Korean-Culture/src/train/: train_all.sh  train_transformers_full_fine_tuning.py  train_transformers_full_fine_tuning.sh  train_unsloth_fine_tuning.py  train_unsloth_fine_tuning.sh
(+25 files in other folders)
